# Celero

./: CMakeLists.txt  makefile
examples/: CMakeLists.txt  DemoComparison.cpp  DemoParameterPassing.cpp  DemoSimple.cpp  DemoSimpleJUnit.cpp  DemoSleep.cpp  DemoSort.cpp  DemoTransform.cpp
include/celero/: BenchmarkInfo.h  GenericFactory.h  JUnit.h  ResultTable.h  TestVector.h  celero-benchmark_info.h  celero-factory.h  celero-generic_factory.h  celero-test_fixture.h  celero.h
include/celero/internal/: celero-console.h  celero-executor.h  celero-junit.h  celero-pimpl.h  celero-print.h  celero-test_vector.h
src/: benchmark_info.cc  celero-console.cc  celero-executor.cc  celero-junit.cc  celero-print.cc  celero-result_table.cc  celero-test_vector.cc  celero.cc  celero_main.cc  executor.cc  junit.cc  print.cc  result_table.cc  test_fixture.cc  test_vector.cc  timer.cc
test/: CMakeLists.txt  Dummy.cc  celero-benchmark_info_mock.h  celero-benchmark_mock.h  celero-executor_test.cc  celero-factory_mock.h
